<resources>
    // Application scope
    <string name="app_name" translatable="false">Story Heroes</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="btn_rate">Rate App</string>
    <string name="uri_to_market_google_play" translatable="false">market://details?id=%1$s</string>
    <string name="uri_to_http_google_play" translatable="false">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="ad_key_test_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_key_id" translatable="false">ca-app-pub-8179777113013566/9995202148</string>

    //Splash screen
    <string name="version" translatable="false">Version: %1$d (%2$s)</string>
    <string name="version_tools" translatable="false">Version: 5 (0.1.2)</string>
    <string name="factor" translatable="false">1.5</string>

    // Welcome screen
    <string name="game_loading_msg">The game is loading. Please wait…</string>
    <string name="title_welcome">Welcome!</string>
    <string name="btn_start_game">Create a fairy tale</string>
    <string name="btn_library">My Library</string>
    <string name="btn_about"><u>About</u></string>
    <string name="btn_help"><u>Rules</u></string>
    <string name="msg_on_exit">See you soon!</string>

    // Rules screen
    <string name="title_rules">Rules</string>
    <string name="subtitle_rules">How to create a fairy tale?</string>
    <string name="rules_full_description">
        The game can be played by 2 to 8 people.\n
        - Players make their moves in turns.\n
        - The turns order is determined in the beginning of the game. It corresponds to the order in which the players were added to the team.\n
        - A player comes up with a sentence limited to %1$d characters.\n
        - Any player can finish the game after each of the participants has made at least 1 move.\n\n
        There are 3 difficulty modes in the game:\n
        1. Easy. All previously composed sentences are visible to all participants in the game at any time.\n
        2. Medium. The player sees only the last sentence composed by the player before him.\n
        3. Hard. The player sees only the last sentence composed by the player before him. In his turn the player must use the randomly generated mandatory word.</string>

    // Game creation screens
    <string name="arrow_back" translatable="false"><![CDATA[<<<]]></string>
    <string name="dots_line" translatable="false">..............</string>

    // Level screen
    <string name="title_level">Level</string>
    <string name="btn_easy">Easy</string>
    <string name="rules_easy_description">All previously composed sentences are visible to all participants in the game at any time.</string>
    <string name="btn_medium">Medium</string>
    <string name="rules_medium_description">The player sees only the last sentence composed by the player before him.</string>
    <string name="btn_hard">Hard</string>
    <string name="rules_hard_description">The player sees only the last sentence composed by the player before him. In his turn the player must use the randomly generated mandatory word.</string>
    <string name="btn_next">Next</string>

    // Characters screen
    <string name="title_character">Character</string>
    <string name="btn_new_character"><u>Add new character +</u></string>
    <string name="subtitle_heroes">Choose your role:</string>
    <string name="char_icon" translatable="false">" =) "</string>
    <string name="hint_enter_name">Name</string>
    <string name="btn_save">Save</string>
    <string name="msg_team_full">Maximum number of players reached.</string>
    <string name="msg_need_more_players">The game can be played by 2 to 8 players.</string>
    <string name="btn_edit">edit</string>
    <string name="remove">remove</string>
    <string name="rv_players_underline" translatable="false">-----------------------</string>
    <string name="btn_choose_location">Choose location</string>
    <string name="err_short_name">Minimum name length 2 characters</string>
    <string name="err_name_is_gaps">Please, enter name</string>
    <string name="err_character_not_selected">Please, select your character</string>

    // Location screen
    <string name="title_location">Location</string>
    <string name="tale_begins">Your tale begins here:</string>

    // Game process screens
    <string name="game_start_title">The tale is about to begin…</string>
    <string name="level_rules_short">Players make their moves in turns and \n can only come up with one sentence</string>
    <string name="intro_text">Start composing your tale…</string>
    <string name="btn_start">Start</string>
    <string name="game_turn">"Turn for "</string>
    <string name="mandatory_word">"Mandatory word:"</string>
    <string name="btn_send">send</string>
    <string name="btn_end"><u>End the Tale</u></string>
    <string name="btn_resume"><u>Continue game</u></string>
    <string name="btn_select_cover">Select cover</string>
    <string name="msg_incorrect_sentence">Isn`t correct sentence</string>
    <string name="err_mandatory_word_missing">Please, use a mandatory word</string>
    <string name="err_short_sentence">Minimum sentence length 2 characters</string>
    <string name="err_sentence_is_gaps">Please, enter sentence</string>

    // Choosing Cover and Title screens
    <string name="title_choosing_cover">Choosing a cover</string>
    <string name="choosing_cover_choose">Choose a cover for your fairy tale</string>
    <string name="choosing_cover_title">Come up with the title</string>
    <string name="enter_title">Enter title</string>

    //Editing screen
    <string name="title_edit">Please, edit your story…</string>
    <string name="edit_text_view_name" translatable="false">EditText</string>

    // Library screens
    <string name="title_library">Library</string>
    <string name="subtitle_library">My Fairy Tales</string>
    <string name="btn_edit_story">Edit</string>
    <string name="btn_copy">"Copy "</string>
    <string name="msg_copy">Copied to clipboard</string>
    <string name="btn_share">"Share "</string>
    <string name="share_bottom_sheet_title">Share your story…</string>
    <string name="msg_share">Try to write your own story here: \n<u>%1$s</u></string>
    <string name="btn_delete">Delete</string>
    <string name="msg_delete">Tale deleted</string>
    <string name="msg_saved_successfully">Saved successfully</string>
    <string name="tale_title_sample" translatable="false">Сказка про Ивана-дурака и Серого Волка за границей вашего воображения, но в рамках дозволенного законом</string>
    <string name="tale_text_sample" translatable="false">В некотором царстве, в некотором государстве жил-был царь, у царя было три сына. Вот дети и говорят ему:\n
        - Милостивый батюшка! Благослови нас, мы на охоту поедем.\n
        Отец благословил, и они поехали в разные стороны. Младший сын ездил, ездил и заплутался; выезжает на поляну, на поляне лежит палая лошадь,
        около этой падали собралось много всяких зверей, птиц и гадов. Поднялся сокол, прилетел к царевичу, сел ему на плечо и говорит:\n
        - Иван-царевич, раздели нам эту лошадь; лежит она здесь тридцать три года, а мы все спорим, а как поделить - не придумаем.\n
        Царевич слез с своего доброго коня и разделил падаль: зверям - кости, птицам - мясо, кожа - гадам, а голова - муравьям.\n
        - Спасибо, Иван-царевич! - сказал сокол, - За эту услугу можешь ты обращаться ясным соколом и муравьем всякий раз, как захочешь.</string>
    <string name="btn_menu">menu</string>

    // Dialog fragment
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_delete_story">Delete the story?</string>
    <string name="dialog_save_story">Save changes to the story?</string>
    <string name="dialog_character">Delete the character?</string>
    <string name="dialog_exit">Close Story Heroes?</string>
    <string name="positive_answer">OK</string>
    <string name="negative_answer">Cancel</string>
    <string name="agreement_dialog_title">Important</string>
    <string name="agreement_dialog_text">By choosing "Accept", I agree with the
        <a href="https://storyheroes.flycricket.io/terms.html">Terms of Use</a> and
        <a href="https://storyheroes.flycricket.io/privacy.html">Privacy Policy</a>.</string>
    <string name="accept_answer">Accept</string>
    <string name="decline_answer">Decline</string>
    <string name="msg_agreement_declined">GAME OVER</string>
    <string name="msg_agreement_accepted">Agreements accepted</string>

    // Tutorial fragment
    <string name="btn_tutorial"><u>How to play?</u></string>
    <string name="btn_ok">Thank you, I understand</string>
    <string name="btn_skip">Skip</string>
    <string name="stepText_1">Click "Create a fairy tale" to start.</string>
    <string name="stepText_2">Select the difficulty level and click Next</string>
    <string name="stepText_3">Enter a name, then select the hero and click Save</string>
    <string name="stepText_4">To continue, click the Choose location</string>
    <string name="stepText_5">Choose the location where your fairy tale will begin</string>
    <string name="stepText_6">Come up with a fairy tale, then click on Complete fairy tale</string>
    <string name="stepText_7">Choose a cover for your fairy tale</string>
    <string name="stepText_8">Come up with a title for your fairy tale and click Save</string>

    // New strings... move them to the corresponding group above


</resources>
