<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/btn_edit"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/btn_edit_story"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/btn_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/btn_share"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/btn_copy"
        android:icon="@drawable/ic_copy_24"
        android:title="@string/btn_copy"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/btn_delete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/btn_delete"
        app:showAsAction="never|withText" />
</menu>