<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_xxs"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/book_cover_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/title_location"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/cover_recycler_stub" />

    <TextView
        android:id="@+id/book_name"
        style="@style/SubHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:maxLines="@integer/max_lines_title"
        android:layout_margin="@dimen/margin_large"
        android:paddingHorizontal="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tale_title_sample" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/no_color"
        android:contentDescription="@string/btn_menu"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginVertical="@dimen/margin_xxs"
        android:layout_marginHorizontal="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_menu">

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:background="@color/no_color"
            android:layout_marginVertical="@dimen/margin_xxs"
            android:contentDescription="@string/btn_share" />

        <ImageButton
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy"
            android:background="@color/no_color"
            android:layout_marginVertical="@dimen/margin_xxs"
            android:contentDescription="@string/btn_copy" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:background="@color/no_color"
            android:layout_marginVertical="@dimen/margin_xxs"
            android:contentDescription="@string/btn_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>