<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_layout_standard"
    android:paddingTop="@dimen/padding_layout_standard"
    android:paddingBottom="@dimen/padding_layout_bottom"
    android:background="@drawable/ic_background_default">

    <ImageView
        android:id="@+id/back_button_location"
        style="@style/BackArrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/screen_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/screen_header" />

    <TextView
        android:id="@+id/screen_header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_start_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rule_tv"
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/level_rules_short"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintTop_toBottomOf="@id/screen_header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_marginHorizontal="@dimen/padding_layout_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


