<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="wrap_content"
    tools:background="@color/no_color">

    <ImageView
        android:id="@+id/character"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxs"
        android:contentDescription="@string/char_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_pirate" />

    <TextView
        android:id="@+id/player_name_tv"
        style="@style/SubHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/character"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Боцман Супчик" />

    <ImageView
        android:id="@+id/remove_player_iv"
        android:src="@drawable/ic_delete"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:contentDescription="@string/remove"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pencil"
        android:src="@drawable/ic_edit"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_xxs"
        android:contentDescription="@string/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:background="@drawable/ic_underline"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:contentDescription="@string/rv_players_underline"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
