<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_layout_standard"
    android:paddingTop="@dimen/padding_layout_standard"
    android:paddingBottom="@dimen/padding_small"
    tools:background="@drawable/ic_background_default">

    <ImageView
        android:id="@+id/back_button_character"
        style="@style/BackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/screen_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/screen_header" />

    <TextView
        android:id="@+id/screen_header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_choosing_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_header"
        style="@style/SubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_standard"
        android:text="@string/choosing_cover_choose"
        app:layout_constraintTop_toBottomOf="@id/screen_header" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_header"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_covers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_header"
        app:spanCount="2"
        tools:itemCount="9"
        tools:listitem="@layout/item_image_cover"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
