<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingHorizontal="@dimen/padding_layout_standard"
    android:paddingTop="@dimen/padding_layout_standard"
    android:paddingBottom="@dimen/padding_layout_bottom"
    tools:background="@drawable/location_night_city">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/BackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/no_color"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/screen_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/screen_header" />

    <TextView
        android:id="@+id/screen_header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_standard"
        android:scrollbars="vertical"
        app:layout_constraintHeight_max="@dimen/max_title_height"
        app:layout_constraintTop_toBottomOf="@id/screen_header">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xxs"
            android:textColorHint="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/max_length_title"
            app:counterTextAppearance="@style/WhiteCounter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_title_text"
                style="@style/SubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/no_color"
                android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
                android:maxLength="@integer/max_length_title"
                tools:text="@string/tale_title_sample" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/frame_rv_sentences"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/background_back"
        android:padding="@dimen/margin_xs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        app:layout_constraintVertical_bias="0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/line_spacing_extra"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="6"
            tools:listitem="@layout/item_book_sentence" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/title_choosing_cover"
        android:scaleType="fitXY"
        android:src="@drawable/background_front"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/frame_rv_sentences" />

</androidx.constraintlayout.widget.ConstraintLayout>